fixing background image rendering on mobile view

--- a/app/assets/stylesheets/blur_effect.scss
+++ b/app/assets/stylesheets/blur_effect.scss
@@ -16,16 +16,16 @@
   line-height: 1.5;
   overflow: hidden;
 }
-// .greeting::before {
-//   background: image-url('el-capitan-2.jpg') 0 / cover fixed;
-//   content: '';
-//   margin: -100px;
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   left: 0;
-//   -webkit-filter: blur(10px);
-//   filter: blur(10px);
-//   z-index: -1;
-// }
+.greeting::before {
+  background: image-url('el-capitan-2.jpg') 0 / cover fixed;
+  content: '';
+  margin: -100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+  z-index: -1;
+}
